# passagemath

./: .backportrc.json  .gitignore  .homebrew-build-env  CITATION.cff  CITATION.cff.in  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_COMMITTEE.md  CONTRIBUTING.md  COPYING.txt  MANIFEST.in  Makefile  README.md  VERSION.txt  _graver_basis.py  bootstrap  bootstrap-conda  configure.ac  configure_wrapper  constraints_pkgs.txt  environment-3.12-linux-aarch64.yml  environment-3.12-linux.yml  environment-3.12-macos-x86_64.yml  environment-3.12-macos.yml  environment-3.12-win.yml  environment-3.13-linux-aarch64.yml  environment-3.13-linux.yml  environment-3.13-macos-x86_64.yml  environment-3.13-macos.yml  environment-3.13-win.yml  environment-3.14-linux-aarch64.yml  environment-3.14-linux.yml  environment-3.14-macos-x86_64.yml  environment-3.14-macos.yml  environment-3.14-win.yml  graver_basis.py  matrix_integer_dense.pyx  meson.build  pyproject.toml  sage-spkg-info.py  tox.ini
src/: .relint.yml  LICENSE.txt  VERSION.txt  conftest.py  meson.build  mypy.ini  pyproject.toml  requirements.txt.m4  setup.cfg.m4  setup.py  tox.ini
src/doc/: Makefile
src/sage/: all.py  all__sagemath_benzene.py  all__sagemath_bliss.py  all__sagemath_brial.py  all__sagemath_buckygen.py  all__sagemath_categories.py  all__sagemath_cddlib.py  all__sagemath_cliquer.py  all__sagemath_cmr.py  all__sagemath_combinat.py  all__sagemath_coxeter3.py  all__sagemath_database_cunningham.py  all__sagemath_database_jones_numfield.py  all__sagemath_database_kohel.py  all__sagemath_database_odlyzko_zeta.py  all__sagemath_database_stein_watkins_mini.py  all__sagemath_database_symbolic_data.py  all__sagemath_ecl.py  all__sagemath_eclib.py  all__sagemath_environment.py  all__sagemath_flint.py  all__sagemath_fricas.py  all__sagemath_frobby.py  all__sagemath_gap.py  all__sagemath_gap_pkg_caratinterface.py  all__sagemath_gap_pkg_cddinterface.py  all__sagemath_gap_pkg_curlinterface.py  all__sagemath_gfan.py  all__sagemath_giac.py  all__sagemath_glpk.py  all__sagemath_glucose.py  all__sagemath_graphs.py  all__sagemath_groups.py  all__sagemath_gsl.py  all__sagemath_highs.py  all__sagemath_homfly.py  all__sagemath_iml.py  all__sagemath_kenzo.py  all__sagemath_kissat.py  all__sagemath_latte_4ti2.py  (+38 more)
src/sage/algebras/: affine_nil_temperley_lieb.py  all.py  all__sagemath_combinat.py  all__sagemath_modules.py  all__sagemath_singular.py  askey_wilson.py  associated_graded.py  cellular_basis.py  clifford_algebra.py  clifford_algebra_element.pyi  clifford_algebra_element.pyx  cluster_algebra.py  commutative_dga.py  down_up_algebra.py  exterior_algebra_groebner.pyi  exterior_algebra_groebner.pyx  finite_gca.py  free_algebra.py  free_algebra_element.py  free_algebra_quotient.py  free_algebra_quotient_element.py  free_zinbiel_algebra.py  group_algebra.py  hall_algebra.py  iwahori_hecke_algebra.py  jordan_algebra.py  nil_coxeter_algebra.py  octonion_algebra.pyx  orlik_solomon.py  orlik_terao.py  q_commuting_polynomials.py  q_system.py  quantum_clifford.py  quantum_matrix_coordinate_algebra.py  quantum_oscillator.py  quaternion_algebra.py  quaternion_algebra_element.py  rational_cherednik_algebra.py  schur_algebra.py  shuffle_algebra.py  (+5 more)
src/sage/arith/: all.py  functions.pyi  functions.pyx  misc.py  multi_modular.pyx  rational_reconstruction.pxd  rational_reconstruction.pyi  rational_reconstruction.pyx
src/sage/calculus/: all.py  all__sagemath_gsl.py  all__sagemath_modules.py  calculus.py  desolvers.py  expr.py  functional.py  functions.py  integration.pyx  interpolation.pxd  interpolation.pyx  interpolators.pyx  ode.pxd  ode.pyx  riemann.pyx  test_sympy.py  tests.py  var.pyx  wester.py
src/sage/categories/: additive_groups.py  additive_magmas.py  additive_monoids.py  additive_semigroups.py  algebras.py  basic.py  bialgebras_with_basis.py  bimodules.py  cartesian_product.py  category.py  category_types.py  category_with_axiom.py  chain_complexes.py  classical_crystals.py  commutative_additive_groups.py  commutative_additive_monoids.py  commutative_additive_semigroups.py  commutative_algebra_ideals.py  commutative_ring_ideals.py  commutative_rings.py  complete_discrete_valuation.py  covariant_functorial_construction.py  coxeter_groups.py  crystals.py  dedekind_domains.py  discrete_valuation.py  enumerated_sets.py  fields.py  filtered_algebras.py  filtered_algebras_with_basis.py  filtered_modules_with_basis.py  finite_complex_reflection_groups.py  finite_coxeter_groups.py  finite_crystals.py  finite_dimensional_algebras_with_basis.py  finite_dimensional_lie_algebras_with_basis.py  finite_dimensional_modules_with_basis.py  finite_dimensional_nilpotent_lie_algebras_with_basis.py  finite_enumerated_sets.py  finite_fields.py  (+54 more)
src/sage/coding/: abstract_code.py  ag_code.py  ag_code_decoders.pyx  bch_code.py  binary_code.pxd  binary_code.pyx  code_bounds.py  code_constructions.py  cyclic_code.py  databases.py  decoder.py  delsarte_bounds.py  encoder.py  extended_code.py  golay_code.py  goppa_code.py  grs_code.py  information_set_decoder.py  kasami_codes.pyx  linear_code.py  linear_code_no_metric.py  linear_rank_metric.py  punctured_code.py  reed_muller_code.py  self_dual_codes.py
src/sage/combinat/: SJT.py  abstract_tree.py  affine_permutation.py  all.py  all__sagemath_categories.py  all__sagemath_combinat.py  alternating_sign_matrix.py  backtrack.py  baxter_permutations.py  bijectionist.py  binary_recurrence_sequences.py  binary_tree.py  blob_algebra.py  cartesian_product.py  catalog_partitions.py  cluster_complex.py  colored_permutations.py  colored_permutations_representations.py  combinat.py  combinat_cython.pyx  combination.py  combinatorial_map.py  composition.py  composition_signed.py  composition_tableau.py  constellation.py  core.py  counting.py  debruijn_sequence.pyx  degree_sequences.pyx  derangements.py  descent_algebra.py  diagram.py  diagram_algebras.py  dlx.py  dyck_word.py  e_one_star.py  enumerated_sets.py  enumeration_mod_permgroup.pyx  expnums.pyx  (+93 more)
src/sage_docbuild/: builders.py  conf.py
src/sage_setup/: __init__.py  find.py  setenv.py
(+3623 files in other folders)
